Fixed course-outline image overflow

--- a/static/css/scss/course.scss
+++ b/static/css/scss/course.scss
@@ -15,6 +15,11 @@
   padding: 20px;
   margin: 0;
   margin-bottom: 20px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .badge-info {
